# codeforge-agent

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
agent/: graph.py  llm.py  state.py
agent/nodes/: __init__.py  executor.py  planner.py  replier.py  verifier.py
agent/prompts/: __init__.py  executor_prompt.py  planner_prompt.py  system_prompt.py  verifier_prompt.py
agent/routing/: __init__.py  base.py  rule_based.py
cli/: __init__.py  app.py  display.py  parser.py
config/: .env.example  dashscope_client.py  settings.py
memory/: __init__.py  context_window.py  conversation.py  file_memory.py
rag/: __init__.py  bailian_retriever.py  embeddings.py  rag_tool.py
sandbox/: __init__.py  executor.py
tools/: __init__.py  bash_tool.py  file_edit_tool.py  file_read_tool.py  glob_tool.py  grep_tool.py  patch_tool.py  test_tool.py
