[project]
name = "codeforge-agent"
version = "0.1.0"
description = "CLI coding agent powered by LangGraph, LangChain and DashScope/Bailian"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"aiofiles>=24.1.0",
	"dashscope>=1.24.0",
	"langchain>=0.3.20",
	"langchain-community>=0.3.19",
	"langchain-core>=0.3.43",
	"langchain-openai>=0.3.8",
	"langgraph>=0.3.5",
	"openai>=1.68.0",
	"openpyxl",
	"pandas",
	"prompt-toolkit>=3.0.51",
	"pyarrow",
	"pydantic>=2.10.6",
	"pydantic-settings>=2.8.1",
	"rich>=13.9.4",
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.5",
	"pytest-asyncio>=0.25.3",
]

[project.scripts]
codeforge-agent = "main:main"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"
